docs/4.20/installing/installing_nutanix/installing-restricted-networks-nutanix-installer-provisioned.md
In OpenShift Container Platform 4.17, you can install a cluster on Nutanix infrastructure in a restricted network by creating an internal mirror of the installation release content.

# Prerequisites

- You have reviewed details about the [OpenShift Container Platform installation and update](../../architecture/architecture-installation.xml#architecture-installation) processes.

- The installation program requires access to port 9440 on Prism Central and Prism Element. You verified that port 9440 is accessible.

- If you use a firewall, you have met these prerequisites:

  - You confirmed that port 9440 is accessible. Control plane nodes must be able to reach Prism Central and Prism Element on port 9440 for the installation to succeed.

  - You configured the firewall to [grant access](../../installing/install_config/configuring-firewall.xml#configuring-firewall) to the sites that OpenShift Container Platform requires. This includes the use of Telemetry.

- If your Nutanix environment is using the default self-signed SSL/TLS certificate, replace it with a certificate that is signed by a CA. The installation program requires a valid CA-signed certificate to access to the Prism Central API. For more information about replacing the self-signed certificate, see the [Nutanix AOS Security Guide](https://portal.nutanix.com/page/documents/details?targetId=Nutanix-Security-Guide-v6_1:mul-security-ssl-certificate-pc-t.html).

  If your Nutanix environment uses an internal CA to issue certificates, you must configure a cluster-wide proxy as part of the installation process. For more information, see [Configuring a custom PKI](../../networking/configuring_network_settings/configuring-a-custom-pki.xml#configuring-a-custom-pki).

  <div class="important">

  Use 2048-bit certificates. The installation fails if you use 4096-bit certificates with Prism Central 2022.x.

  </div>

- You have a container image registry, such as Red Hat Quay. If you do not already have a registry, you can create a mirror registry using [*mirror registry for Red Hat OpenShift*](../../disconnected/installing-mirroring-creating-registry.xml#installing-mirroring-creating-registry).

- You have used the [oc-mirror OpenShift CLI (oc) plugin](../../disconnected/about-installing-oc-mirror-v2.xml#about-installing-oc-mirror-v2) to mirror all of the required OpenShift Container Platform content and other images, including the Nutanix CSI Operator, to your mirror registry.

  <div class="important">

  Because the installation media is on the mirror host, you can use that computer to complete all installation steps.

  </div>

# About installations in restricted networks

In OpenShift Container Platform 4.17, you can perform an installation that does not require an active connection to the internet to obtain software components. Restricted network installations can be completed using installer-provisioned infrastructure or user-provisioned infrastructure, depending on the cloud platform to which you are installing the cluster.

If you choose to perform a restricted network installation on a cloud platform, you still require access to its cloud APIs. Some cloud functions, like Amazon Web Service’s Route 53 DNS and IAM services, require internet access. Depending on your network, you might require less internet access for an installation on bare metal hardware, Nutanix, or on VMware vSphere.

To complete a restricted network installation, you must create a registry that mirrors the contents of the OpenShift image registry and contains the installation media. You can create this registry on a mirror host, which can access both the internet and your closed network, or by using other methods that meet your restrictions.

## Additional limits

Clusters in restricted networks have the following additional limitations and restrictions:

- The `ClusterVersion` status includes an `Unable to retrieve available updates` error.

- By default, you cannot use the contents of the Developer Catalog because you cannot access the required image stream tags.

# Generating a key pair for cluster node SSH access

To enable secure, passwordless SSH access to your cluster nodes, provide an SSH public key during the OpenShift Container Platform installation. This ensures that the installation program automatically configures the Red Hat Enterprise Linux CoreOS (RHCOS) nodes for remote authentication through the `core` user.

The SSH public key gets added to the `~/.ssh/authorized_keys` list for the `core` user on each node. After the key is passed to the Red Hat Enterprise Linux CoreOS (RHCOS) nodes through their Ignition config files, you can use the key pair to SSH in to the RHCOS nodes as the user `core`. To access the nodes through SSH, the private key identity must be managed by SSH for your local user.

If you want to SSH in to your cluster nodes to perform installation debugging or disaster recovery, you must provide the SSH public key during the installation process. The `./openshift-install gather` command also requires the SSH public key to be in place on the cluster nodes.

<div class="important">

Do not skip this procedure in production environments, where disaster recovery and debugging is required.

</div>

<div class="note">

You must use a local key, not one that you configured with platform-specific approaches.

</div>

1.  If you do not have an existing SSH key pair on your local machine to use for authentication onto your cluster nodes, create one. For example, on a computer that uses a Linux operating system, run the following command:

    ``` terminal
    $ ssh-keygen -t ed25519 -N '' -f <path>/<file_name>
    ```

    Specifies the path and file name, such as `~/.ssh/id_ed25519`, of the new SSH key. If you have an existing key pair, ensure your public key is in the your `~/.ssh` directory.

    <div class="note">

    If you plan to install an OpenShift Container Platform cluster that uses the RHEL cryptographic libraries that have been submitted to NIST for FIPS 140-2/140-3 Validation on only the `x86_64`, `ppc64le`, and `s390x` architectures, do not create a key that uses the `ed25519` algorithm. Instead, create a key that uses the `rsa` or `ecdsa` algorithm.

    </div>

2.  View the public SSH key:

    ``` terminal
    $ cat <path>/<file_name>.pub
    ```

    For example, run the following to view the `~/.ssh/id_ed25519.pub` public key:

    ``` terminal
    $ cat ~/.ssh/id_ed25519.pub
    ```

3.  Add the SSH private key identity to the SSH agent for your local user, if it has not already been added. SSH agent management of the key is required for password-less SSH authentication onto your cluster nodes, or if you want to use the `./openshift-install gather` command.

    <div class="note">

    On some distributions, default SSH private key identities such as `~/.ssh/id_rsa` and `~/.ssh/id_dsa` are managed automatically.

    </div>

    1.  If the `ssh-agent` process is not already running for your local user, start it as a background task:

        ``` terminal
        $ eval "$(ssh-agent -s)"
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        Agent pid 31874
        ```

        <div class="note">

        If your cluster is in FIPS mode, only use FIPS-compliant algorithms to generate the SSH key. The key must be either RSA or ECDSA.

        </div>

4.  Add your SSH private key to the `ssh-agent`:

    ``` terminal
    $ ssh-add <path>/<file_name>
    ```

    Specifies the path and file name for your SSH private key, such as `~/.ssh/id_ed25519`

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    Identity added: /home/<you>/<path>/<file_name> (<computer_name>)
    ```

- When you install OpenShift Container Platform, provide the SSH public key to the installation program.

# Adding Nutanix root CA certificates to your system trust

Because the installation program requires access to the Prism Central API, you must add your Nutanix trusted root CA certificates to your system trust before you install an OpenShift Container Platform cluster.

1.  From the Prism Central web console, download the Nutanix root CA certificates.

2.  Extract the compressed file that contains the Nutanix root CA certificates.

3.  Add the files for your operating system to the system trust. For example, on a Fedora operating system, run the following command:

    ``` terminal
    # cp certs/lin/* /etc/pki/ca-trust/source/anchors
    ```

4.  Update your system trust. For example, on a Fedora operating system, run the following command:

    ``` terminal
    # update-ca-trust extract
    ```

# Downloading the RHCOS cluster image

Prism Central requires access to the Red Hat Enterprise Linux CoreOS (RHCOS) image to install the cluster. You can use the installation program to locate and download the RHCOS image and make it available through an internal HTTP server or Nutanix Objects.

- Obtain the OpenShift Container Platform installation program and the pull secret for your cluster. For a restricted network installation, these files are on your mirror host.

1.  Change to the directory that contains the installation program and run the following command:

    ``` terminal
    $ ./openshift-install coreos print-stream-json
    ```

2.  Use the output of the command to find the location of the Nutanix image, and click the link to download it.

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    "nutanix": {
      "release": "411.86.202210041459-0",
      "formats": {
        "qcow2": {
          "disk": {
            "location": "https://rhcos.mirror.openshift.com/art/storage/releases/rhcos-4.11/411.86.202210041459-0/x86_64/rhcos-411.86.202210041459-0-nutanix.x86_64.qcow2",
            "sha256": "42e227cac6f11ac37ee8a2f9528bb3665146566890577fd55f9b950949e5a54b"
    ```

3.  Make the image available through an internal HTTP server or Nutanix Objects.

4.  Note the location of the downloaded image. You update the `platform` section in the installation configuration file (`install-config.yaml`) with the image’s location before deploying the cluster.

<div class="formalpara-title">

**Snippet of an `install-config.yaml` file that specifies the RHCOS image**

</div>

``` yaml
platform:
  nutanix:
    clusterOSImage: http://example.com/images/rhcos-411.86.202210041459-0-nutanix.x86_64.qcow2
```

# Creating the installation configuration file

You can customize the OpenShift Container Platform cluster you install on Nutanix.

- You have the OpenShift Container Platform installation program and the pull secret for your cluster. For a restricted network installation, these files are on your mirror host.

- You have the `imageContentSourcePolicy.yaml` file that was created when you mirrored your registry.

- You have the location of the Red Hat Enterprise Linux CoreOS (RHCOS) image you download.

- You have obtained the contents of the certificate for your mirror registry.

- You have retrieved a Red Hat Enterprise Linux CoreOS (RHCOS) image and uploaded it to an accessible location.

- You have verified that you have met the Nutanix networking requirements. For more information, see "Preparing to install on Nutanix".

1.  Create the `install-config.yaml` file.

    1.  Change to the directory that contains the installation program and run the following command:

        ``` terminal
        $ ./openshift-install create install-config --dir <installation_directory>
        ```

        - `<installation_directory>`: For `<installation_directory>`, specify the directory name to store the files that the installation program creates.

          When specifying the directory:

        - Verify that the directory has the `execute` permission. This permission is required to run Terraform binaries under the installation directory.

        - Use an empty directory. Some installation assets, such as bootstrap X.509 certificates, have short expiration intervals, therefore you must not reuse an installation directory. If you want to reuse individual files from another cluster installation, you can copy them into your directory. However, the file names for the installation assets might change between releases. Use caution when copying installation files from an earlier OpenShift Container Platform version.

    2.  At the prompts, provide the configuration details for your cloud:

        1.  Optional: Select an SSH key to use to access your cluster machines.

            <div class="note">

            For production OpenShift Container Platform clusters on which you want to perform installation debugging or disaster recovery, specify an SSH key that your `ssh-agent` process uses.

            </div>

        2.  Select **nutanix** as the platform to target.

        3.  Enter the Prism Central domain name or IP address.

        4.  Enter the port that is used to log into Prism Central.

        5.  Enter the credentials that are used to log into Prism Central.

            The installation program connects to Prism Central.

        6.  Select the Prism Element that will manage the OpenShift Container Platform cluster.

        7.  Select the network subnet to use.

        8.  Enter the virtual IP address that you configured for control plane API access.

        9.  Enter the virtual IP address that you configured for cluster ingress.

        10. Enter the base domain. This base domain must be the same one that you configured in the DNS records.

        11. Enter a descriptive name for your cluster.

            The cluster name you enter must match the cluster name you specified when configuring the DNS records.

2.  In the `install-config.yaml` file, set the value of `platform.nutanix.clusterOSImage` to the image location or name. For example:

    ``` yaml
    platform:
      nutanix:
          clusterOSImage: http://mirror.example.com/images/rhcos-47.83.202103221318-0-nutanix.x86_64.qcow2
    ```

3.  Edit the `install-config.yaml` file to give the additional information that is required for an installation in a restricted network.

    1.  Update the `pullSecret` value to contain the authentication information for your registry:

        ``` yaml
        pullSecret: '{"auths":{"<mirror_host_name>:5000": {"auth": "<credentials>","email": "you@example.com"}}}'
        ```

        For `<mirror_host_name>`, specify the registry domain name that you specified in the certificate for your mirror registry, and for `<credentials>`, specify the base64-encoded user name and password for your mirror registry.

    2.  Add the `additionalTrustBundle` parameter and value.

        ``` yaml
        additionalTrustBundle: |
          -----BEGIN CERTIFICATE-----
          ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
          -----END CERTIFICATE-----
        ```

        The value must be the contents of the certificate file that you used for your mirror registry. The certificate file can be an existing, trusted certificate authority, or the self-signed certificate that you generated for the mirror registry.

    3.  Add the image content resources, which resemble the following YAML excerpt:

        ``` yaml
        imageContentSources:
        - mirrors:
          - <mirror_host_name>:5000/<repo_name>/release
          source: quay.io/openshift-release-dev/ocp-release
        - mirrors:
          - <mirror_host_name>:5000/<repo_name>/release
          source: registry.redhat.io/ocp/release
        ```

        For these values, use the `imageContentSourcePolicy.yaml` file that was created when you mirrored the registry.

    4.  Optionally, set the publishing strategy to `Internal`:

        ``` yaml
        publish: Internal
        ```

        By setting this option, you create an internal Ingress Controller and a private load balancer.

4.  Optional: Update one or more of the default configuration parameters in the `install.config.yaml` file to customize the installation.

    For more information about the parameters, see "Installation configuration parameters".

    <div class="note">

    If you are installing a three-node cluster, be sure to set the `compute.replicas` parameter to `0`. This ensures that cluster’s control planes are schedulable. For more information, see "Installing a three-node cluster on {platform}".

    </div>

5.  Back up the `install-config.yaml` file so that you can use it to install multiple clusters.

    <div class="important">

    The `install-config.yaml` file is consumed during the installation process. If you want to reuse the file, you must back it up now.

    </div>

- [Installation configuration parameters for Nutanix](../../installing/installing_nutanix/installation-config-parameters-nutanix.xml#installation-config-parameters-nutanix)

## Sample customized install-config.yaml file for Nutanix

You can customize the `install-config.yaml` file to specify more details about your OpenShift Container Platform cluster’s platform or modify the values of the required parameters.

<div class="important">

This sample YAML file is provided for reference only. You must obtain your `install-config.yaml` file by using the installation program and modify it.

</div>

``` yaml
apiVersion: v1
baseDomain: example.com
compute:
- hyperthreading: Enabled
  name: worker
  replicas: 3
  platform:
    nutanix:
      cpus: 2
      coresPerSocket: 2
      memoryMiB: 8196
      osDisk:
        diskSizeGiB: 120
      categories:
      - key: <category_key_name>
        value: <category_value>
controlPlane:
  hyperthreading: Enabled
  name: master
  replicas: 3
  platform:
    nutanix:
      cpus: 4
      coresPerSocket: 2
      memoryMiB: 16384
      osDisk:
        diskSizeGiB: 120
      categories:
      - key: <category_key_name>
        value: <category_value>
metadata:
  creationTimestamp: null
  name: test-cluster
networking:
  clusterNetwork:
  - cidr: 10.128.0.0/14
    hostPrefix: 23
  machineNetwork:
  - cidr: 10.0.0.0/16
  networkType: OVNKubernetes
  serviceNetwork:
  - 172.30.0.0/16
platform:
  nutanix:
    apiVIP: 10.40.142.7
    ingressVIP: 10.40.142.8
    defaultMachinePlatform:
      bootType: Legacy
      categories:
      - key: <category_key_name>
        value: <category_value>
      project:
        type: name
        name: <project_name>
    prismCentral:
      endpoint:
        address: your.prismcentral.domainname
        port: 9440
      password: <password>
      username: <username>
    prismElements:
    - endpoint:
        address: your.prismelement.domainname
        port: 9440
      uuid: 0005b0f1-8f43-a0f2-02b7-3cecef193712
    subnetUUIDs:
    - c7938dc6-7659-453e-a688-e26020c68e43
    clusterOSImage: http://example.com/images/rhcos-47.83.202103221318-0-nutanix.x86_64.qcow2
credentialsMode: Manual
publish: External
pullSecret: '{"auths":{"<local_registry>": {"auth": "<credentials>","email": "you@example.com"}}}'
fips: false
sshKey: ssh-ed25519 AAAA...
additionalTrustBundle: |
  -----BEGIN CERTIFICATE-----
  ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
  -----END CERTIFICATE-----
imageContentSources:
- mirrors:
  - <local_registry>/<local_repository_name>/release
  source: quay.io/openshift-release-dev/ocp-release
- mirrors:
  - <local_registry>/<local_repository_name>/release
  source: quay.io/openshift-release-dev/ocp-v4.0-art-dev
```

- Required. The installation program prompts you for this value.

- The `controlPlane` section is a single mapping, but the compute section is a sequence of mappings. To meet the requirements of the different data structures, the first line of the `compute` section must begin with a hyphen, `-`, and the first line of the `controlPlane` section must not. Although both sections currently define a single machine pool, it is possible that future versions of OpenShift Container Platform will support defining multiple compute pools during installation. Only one control plane pool is used.

- Whether to enable or disable simultaneous multithreading, or `hyperthreading`. By default, simultaneous multithreading is enabled to increase the performance of your machines' cores. You can disable it by setting the parameter value to `Disabled`. If you disable simultaneous multithreading in some cluster machines, you must disable it in all cluster machines.

  <div class="important">

  If you disable simultaneous multithreading, ensure that your capacity planning accounts for the dramatically decreased machine performance.

  </div>

- Optional: Provide additional configuration for the machine pool parameters for the compute and control plane machines.

- Optional: Provide one or more pairs of a prism category key and a prism category value. These category key-value pairs must exist in Prism Central. You can provide separate categories to compute machines, control plane machines, or all machines.

- The cluster network plugin to install. The default value `OVNKubernetes` is the only supported value.

- Optional: Specify a project with which VMs are associated. Specify either `name` or `uuid` for the project type, and then provide the corresponding UUID or project name. You can associate projects to compute machines, control plane machines, or all machines.

- Optional: By default, the installation program downloads and installs the Red Hat Enterprise Linux CoreOS (RHCOS) image. If Prism Central does not have internet access, you can override the default behavior by hosting the RHCOS image on any HTTP server or Nutanix Objects and pointing the installation program to the image.

- For `<local_registry>`, specify the registry domain name, and optionally the port, that your mirror registry uses to serve content. For example `registry.example.com` or `registry.example.com:5000`. For `<credentials>`, specify the base64-encoded user name and password for your mirror registry.

- Whether to enable or disable FIPS mode. By default, FIPS mode is not enabled. If FIPS mode is enabled, the Red Hat Enterprise Linux CoreOS (RHCOS) machines that OpenShift Container Platform runs on bypass the default Kubernetes cryptography suite and use the cryptography modules that are provided with RHCOS instead.

  <div class="important">

  When running Red Hat Enterprise Linux (RHEL) or Red Hat Enterprise Linux CoreOS (RHCOS) booted in FIPS mode, OpenShift Container Platform core components use the RHEL cryptographic libraries that have been submitted to NIST for FIPS 140-2/140-3 Validation on only the x86_64, ppc64le, and s390x architectures.

  </div>

- Optional: You can provide the `sshKey` value that you use to access the machines in your cluster.

  <div class="note">

  For production OpenShift Container Platform clusters on which you want to perform installation debugging or disaster recovery, specify an SSH key that your `ssh-agent` process uses.

  </div>

- Provide the contents of the certificate file that you used for your mirror registry.

- Provide these values from the `metadata.name: release-0` section of the `imageContentSourcePolicy.yaml` file that was created when you mirrored the registry.

## Configuring failure domains

Failure domains improve the fault tolerance of an OpenShift Container Platform cluster by distributing control plane and compute machines across multiple Nutanix Prism Elements (clusters).

<div class="tip">

It is recommended that you configure three failure domains to ensure high-availability.

</div>

- You have an installation configuration file (`install-config.yaml`).

1.  Edit the `install-config.yaml` file and add the following stanza to configure the first failure domain:

    ``` yaml
    apiVersion: v1
    baseDomain: example.com
    compute:
    # ...
    platform:
      nutanix:
        failureDomains:
        - name: <failure_domain_name>
          prismElement:
            name: <prism_element_name>
            uuid: <prism_element_uuid>
          subnetUUIDs:
          - <network_uuid>
    # ...
    ```

    where:

    `<failure_domain_name>`
    Specifies a unique name for the failure domain. The name is limited to 64 or fewer characters, which can include lower-case letters, digits, and a dash (`-`). The dash cannot be in the leading or ending position of the name.

    `<prism_element_name>`
    Optional. Specifies the name of the Prism Element.

    `<prism_element_uuid`\>
    Specifies the UUID of the Prism Element.

    `<network_uuid`\>
    Specifies the one or more UUIDs of the Prism Element subnet objects. Among them, one of the subnet’s IP address prefixes (CIDRs) must contain the virtual IP addresses that the OpenShift Container Platform cluster uses. A maximum of 32 subnets for each failure domain (Prism Element) in an OpenShift Container Platform cluster is supported. All `subnetUUID` values must be unique.

2.  As required, configure additional failure domains.

3.  To distribute control plane and compute machines across the failure domains, do one of the following:

    - If compute and control plane machines can share the same set of failure domains, add the failure domain names under the cluster’s default machine configuration.

      <div class="formalpara-title">

      **Example of control plane and compute machines sharing a set of failure domains**

      </div>

      ``` yaml
      apiVersion: v1
      baseDomain: example.com
      compute:
      # ...
      platform:
        nutanix:
          defaultMachinePlatform:
            failureDomains:
              - failure-domain-1
              - failure-domain-2
              - failure-domain-3
      # ...
      ```

    - If compute and control plane machines must use different failure domains, add the failure domain names under the respective machine pools.

      <div class="formalpara-title">

      **Example of control plane and compute machines using different failure domains**

      </div>

      ``` yaml
      apiVersion: v1
      baseDomain: example.com
      compute:
      # ...
      controlPlane:
        platform:
          nutanix:
            failureDomains:
              - failure-domain-1
              - failure-domain-2
              - failure-domain-3
      # ...
      compute:
        platform:
          nutanix:
            failureDomains:
              - failure-domain-1
              - failure-domain-2
      # ...
      ```

4.  Save the file.

## Configuring the cluster-wide proxy during installation

To enable internet access in environments that deny direct connections, configure a cluster-wide proxy in the `install-config.yaml` file. This configuration ensures that the new OpenShift Container Platform cluster routes traffic through the specified HTTP or HTTPS proxy.

- You have an existing `install-config.yaml` file.

- You have reviewed the sites that your cluster requires access to and determined whether any of them need to bypass the proxy. By default, all cluster egress traffic is proxied, including calls to hosting cloud provider APIs. You added sites to the `Proxy` object’s `spec.noProxy` field to bypass the proxy if necessary.

  <div class="note">

  The `Proxy` object `status.noProxy` field is populated with the values of the `networking.machineNetwork[].cidr`, `networking.clusterNetwork[].cidr`, and `networking.serviceNetwork[]` fields from your installation configuration.

  For installations on Amazon Web Services (AWS), Google Cloud, Microsoft Azure, and Red Hat OpenStack Platform (RHOSP), the `Proxy` object `status.noProxy` field is also populated with the instance metadata endpoint (`169.254.169.254`).

  </div>

1.  Edit your `install-config.yaml` file and add the proxy settings. For example:

    ``` yaml
    apiVersion: v1
    baseDomain: my.domain.com
    proxy:
      httpProxy: http://<username>:<pswd>@<ip>:<port>
      httpsProxy: https://<username>:<pswd>@<ip>:<port>
      noProxy: example.com
    additionalTrustBundle: |
        -----BEGIN CERTIFICATE-----
        <MY_TRUSTED_CA_CERT>
        -----END CERTIFICATE-----
    additionalTrustBundlePolicy: <policy_to_add_additionalTrustBundle>
    # ...
    ```

    where:

    `proxy.httpProxy`
    Specifies a proxy URL to use for creating HTTP connections outside the cluster. The URL scheme must be `http`.

    `proxy.httpsProxy`
    Specifies a proxy URL to use for creating HTTPS connections outside the cluster.

    `proxy.noProxy`
    Specifies a comma-separated list of destination domain names, IP addresses, or other network CIDRs to exclude from proxying. Preface a domain with `.` to match subdomains only. For example, `.y.com` matches `x.y.com`, but not `y.com`. Use `*` to bypass the proxy for all destinations.

    `additionalTrustBundle`
    If provided, the installation program generates a config map that is named `user-ca-bundle` in the `openshift-config` namespace to hold the additional CA certificates. If you provide `additionalTrustBundle` and at least one proxy setting, the `Proxy` object is configured to reference the `user-ca-bundle` config map in the `trustedCA` field. The Cluster Network Operator then creates a `trusted-ca-bundle` config map that merges the contents specified for the `trustedCA` parameter with the RHCOS trust bundle. The `additionalTrustBundle` field is required unless the proxy’s identity certificate is signed by an authority from the RHCOS trust bundle.

    `additionalTrustBundlePolicy`
    Specifies the policy that determines the configuration of the `Proxy` object to reference the `user-ca-bundle` config map in the `trustedCA` field. The allowed values are `Proxyonly` and `Always`. Use `Proxyonly` to reference the `user-ca-bundle` config map only when `http/https` proxy is configured. Use `Always` to always reference the `user-ca-bundle` config map. The default value is `Proxyonly`. Optional parameter.

    <div class="note">

    The installation program does not support the proxy `readinessEndpoints` field.

    </div>

    <div class="note">

    If the installer times out, restart and then complete the deployment by using the `wait-for` command of the installer. For example:

    \+

    ``` terminal
    $ ./openshift-install wait-for install-complete --log-level debug
    ```

    </div>

2.  Save the file and reference it when installing OpenShift Container Platform.

    The installation program creates a cluster-wide proxy that is named `cluster` that uses the proxy settings in the provided `install-config.yaml` file. If no proxy settings are provided, a `cluster` `Proxy` object is still created, but it will have a nil `spec`.

    <div class="note">

    Only the `Proxy` object named `cluster` is supported, and no additional proxies can be created.

    </div>

# Installing the OpenShift CLI on Linux

To manage your cluster and deploy applications from the command line, install the OpenShift CLI (`oc`) binary on Linux.

<div class="important">

If you installed an earlier version of `oc`, you cannot use it to complete all of the commands in OpenShift Container Platform.

Download and install the new version of `oc`.

</div>

1.  Navigate to the [Download OpenShift Container Platform](https://access.redhat.com/downloads/content/290) page on the Red Hat Customer Portal.

2.  Select the architecture from the **Product Variant** list.

3.  Select the appropriate version from the **Version** list.

4.  Click **Download Now** next to the **OpenShift v4.17 Linux Clients** entry and save the file.

5.  Unpack the archive:

    ``` terminal
    $ tar xvf <file>
    ```

6.  Place the `oc` binary in a directory that is on your `PATH`.

    To check your `PATH`, execute the following command:

    ``` terminal
    $ echo $PATH
    ```

- After you install the OpenShift CLI, it is available using the `oc` command:

  ``` terminal
  $ oc <command>
  ```

# Installing the OpenShift CLI on Windows

To manage your cluster and deploy applications from the command line, install OpenShift CLI (`oc`) binary on Windows.

<div class="important">

If you installed an earlier version of `oc`, you cannot use it to complete all of the commands in OpenShift Container Platform.

Download and install the new version of `oc`.

</div>

1.  Navigate to the [Download OpenShift Container Platform](https://access.redhat.com/downloads/content/290) page on the Red Hat Customer Portal.

2.  Select the appropriate version from the **Version** list.

3.  Click **Download Now** next to the **OpenShift v4.17 Windows Client** entry and save the file.

4.  Extract the archive with a ZIP program.

5.  Move the `oc` binary to a directory that is on your `PATH` variable.

    To check your `PATH` variable, open the command prompt and execute the following command:

    ``` terminal
    C:\> path
    ```

- After you install the OpenShift CLI, it is available using the `oc` command:

  ``` terminal
  C:\> oc <command>
  ```

# Installing the OpenShift CLI on macOS

To manage your cluster and deploy applications from the command line, install the OpenShift CLI (`oc`) binary on macOS.

<div class="important">

If you installed an earlier version of `oc`, you cannot use it to complete all of the commands in OpenShift Container Platform.

Download and install the new version of `oc`.

</div>

1.  Navigate to the [Download OpenShift Container Platform](https://access.redhat.com/downloads/content/290) page on the Red Hat Customer Portal.

2.  Select the architecture from the **Product Variant** list.

3.  Select the appropriate version from the **Version** list.

4.  Click **Download Now** next to the **OpenShift v4.17 macOS Clients** entry and save the file.

    <div class="note">

    For macOS arm64, choose the **OpenShift v4.17 macOS arm64 Client** entry.

    </div>

5.  Unpack and unzip the archive.

6.  Move the `oc` binary to a directory on your `PATH` variable.

    To check your `PATH` variable, open a terminal and execute the following command:

    ``` terminal
    $ echo $PATH
    ```

- Verify your installation by using an `oc` command:

  ``` terminal
  $ oc <command>
  ```

# Configuring IAM for Nutanix

Installing the cluster requires that the Cloud Credential Operator (CCO) operate in manual mode. While the installation program configures the CCO for manual mode, you must specify the identity and access management secrets.

- You have configured the `ccoctl` binary.

- You have an `install-config.yaml` file.

1.  Create a YAML file that contains the credentials data in the following format:

    <div class="formalpara-title">

    **Credentials data format**

    </div>

    ``` yaml
    credentials:
    - type: basic_auth
      data:
        prismCentral:
          username: <username_for_prism_central>
          password: <password_for_prism_central>
        prismElements:
        - name: <name_of_prism_element>
          username: <username_for_prism_element>
          password: <password_for_prism_element>
    ```

    - Specify the authentication type. Only basic authentication is supported.

    - Specify the Prism Central credentials.

    - Optional: Specify the Prism Element credentials.

2.  Set a `$RELEASE_IMAGE` variable with the release image from your installation file by running the following command:

    ``` terminal
    $ RELEASE_IMAGE=$(./openshift-install version | awk '/release image/ {print $3}')
    ```

3.  Extract the list of `CredentialsRequest` custom resources (CRs) from the OpenShift Container Platform release image by running the following command:

    ``` terminal
    $ oc adm release extract \
      --from=$RELEASE_IMAGE \
      --credentials-requests \
      --included \
      --install-config=<path_to_directory_with_installation_configuration>/install-config.yaml \
      --to=<path_to_directory_for_credentials_requests>
    ```

    - The `--included` parameter includes only the manifests that your specific cluster configuration requires.

    - Specify the location of the `install-config.yaml` file.

    - Specify the path to the directory where you want to store the `CredentialsRequest` objects. If the specified directory does not exist, this command creates it.

      <div class="formalpara-title">

      **Sample `CredentialsRequest` object**

      </div>

      ``` yaml
        apiVersion: cloudcredential.openshift.io/v1
        kind: CredentialsRequest
        metadata:
          annotations:
            include.release.openshift.io/self-managed-high-availability: "true"
          labels:
            controller-tools.k8s.io: "1.0"
          name: openshift-machine-api-nutanix
          namespace: openshift-cloud-credential-operator
        spec:
          providerSpec:
            apiVersion: cloudcredential.openshift.io/v1
            kind: NutanixProviderSpec
          secretRef:
            name: nutanix-credentials
            namespace: openshift-machine-api
      ```

4.  Use the `ccoctl` tool to process all `CredentialsRequest` objects by running the following command:

    ``` terminal
    $ ccoctl nutanix create-shared-secrets \
      --credentials-requests-dir=<path_to_credentials_requests_directory> \
      --output-dir=<ccoctl_output_dir> \
      --credentials-source-filepath=<path_to_credentials_file>
    ```

    - Specify the path to the directory that contains the files for the component `CredentialsRequests` objects.

    - Optional: Specify the directory in which you want the `ccoctl` utility to create objects. By default, the utility creates objects in the directory in which the commands are run.

    - Optional: Specify the directory that contains the credentials data YAML file. By default, `ccoctl` expects this file to be in `<home_directory>/.nutanix/credentials`.

5.  Edit the `install-config.yaml` configuration file so that the `credentialsMode` parameter is set to `Manual`.

    <div class="formalpara-title">

    **Example `install-config.yaml` configuration file**

    </div>

    ``` yaml
    apiVersion: v1
    baseDomain: cluster1.example.com
    credentialsMode: Manual
    ...
    ```

    - Add this line to set the `credentialsMode` parameter to `Manual`.

6.  Create the installation manifests by running the following command:

    ``` terminal
    $ openshift-install create manifests --dir <installation_directory>
    ```

    - Specify the path to the directory that contains the `install-config.yaml` file for your cluster.

7.  Copy the generated credential files to the target manifests directory by running the following command:

    ``` terminal
    $ cp <ccoctl_output_dir>/manifests/*credentials.yaml ./<installation_directory>/manifests
    ```

- Ensure that the appropriate secrets exist in the `manifests` directory.

  ``` terminal
  $ ls ./<installation_directory>/manifests
  ```

  <div class="formalpara-title">

  **Example output**

  </div>

  ``` text
  cluster-config.yaml
  cluster-dns-02-config.yml
  cluster-infrastructure-02-config.yml
  cluster-ingress-02-config.yml
  cluster-network-01-crd.yml
  cluster-network-02-config.yml
  cluster-proxy-01-config.yaml
  cluster-scheduler-02-config.yml
  cvo-overrides.yaml
  kube-cloud-config.yaml
  kube-system-configmap-root-ca.yaml
  machine-config-server-tls-secret.yaml
  openshift-config-secret-pull-secret.yaml
  openshift-cloud-controller-manager-nutanix-credentials-credentials.yaml
  openshift-machine-api-nutanix-credentials-credentials.yaml
  ```

# Deploying the cluster

You can install OpenShift Container Platform on a compatible cloud platform.

<div class="important">

You can run the `create cluster` command of the installation program only once, during initial installation.

</div>

- You have the OpenShift Container Platform installation program and the pull secret for your cluster.

- You have verified that the cloud provider account on your host has the correct permissions to deploy the cluster. An account with incorrect permissions causes the installation process to fail with an error message that displays the missing permissions.

<!-- -->

- In the directory that contains the installation program, initialize the cluster deployment by running the following command:

  ``` terminal
  $ ./openshift-install create cluster --dir <installation_directory> \
      --log-level=info
  ```

  - For `<installation_directory>`, specify the location of your customized `./install-config.yaml` file.

  - To view different installation details, specify `warn`, `debug`, or `error` instead of `info`.

<div class="formalpara-title">

**Verification**

</div>

When the cluster deployment completes successfully:

- The terminal displays directions for accessing your cluster, including a link to the web console and credentials for the `kubeadmin` user.

- Credential information also outputs to `<installation_directory>/.openshift_install.log`.

<div class="important">

Do not delete the installation program or the files that the installation program creates. Both are required to delete the cluster.

</div>

<div class="formalpara-title">

**Example output**

</div>

``` terminal
...
INFO Install complete!
INFO To access the cluster as the system:admin user when using 'oc', run 'export KUBECONFIG=/home/myuser/install_dir/auth/kubeconfig'
INFO Access the OpenShift web-console here: https://console-openshift-console.apps.mycluster.example.com
INFO Login to the console with user: "kubeadmin", and password: "password"
INFO Time elapsed: 36m22s
```

<div class="important">

- The Ignition config files that the installation program generates contain certificates that expire after 24 hours, which are then renewed at that time. If the cluster is shut down before renewing the certificates and the cluster is later restarted after the 24 hours have elapsed, the cluster automatically recovers the expired certificates. The exception is that you must manually approve the pending `node-bootstrapper` certificate signing requests (CSRs) to recover kubelet certificates. See the documentation for *Recovering from expired control plane certificates* for more information.

- It is recommended that you use Ignition config files within 12 hours after they are generated because the 24-hour certificate rotates from 16 to 22 hours after the cluster is installed. By using the Ignition config files within 12 hours, you can avoid installation failure if the certificate update runs during installation.

</div>

# Post installation

Complete the following steps to complete the configuration of your cluster.

## Disabling the default software catalog sources

Operator catalogs that source content provided by Red Hat and community projects are configured for the software catalog by default during an OpenShift Container Platform installation. In a restricted network environment, you must disable the default catalogs as a cluster administrator.

- Disable the sources for the default catalogs by adding `disableAllDefaultSources: true` to the `OperatorHub` object:

  ``` terminal
  $ oc patch OperatorHub cluster --type json \
      -p '[{"op": "add", "path": "/spec/disableAllDefaultSources", "value": true}]'
  ```

<div class="tip">

Alternatively, you can use the web console to manage catalog sources. From the **Administration** → **Cluster Settings** → **Configuration** → **OperatorHub** page, click the **Sources** tab, where you can create, update, delete, disable, and enable individual sources.

</div>

## Installing the policy resources into the cluster

Mirroring the OpenShift Container Platform content using the oc-mirror OpenShift CLI (oc) plugin creates resources, which include `catalogSource-certified-operator-index.yaml` and `imageContentSourcePolicy.yaml`.

- The `ImageContentSourcePolicy` resource associates the mirror registry with the source registry and redirects image pull requests from the online registries to the mirror registry.

- The `CatalogSource` resource is used by Operator Lifecycle Manager (OLM) Classic to retrieve information about the available Operators in the mirror registry, which lets users discover and install Operators.

  <div class="note">

  OLM v1 uses the `ClusterCatalog` resource to retrieve information about the available cluster extensions in the mirror registry.

  The oc-mirror plugin v1 does not generate `ClusterCatalog` resources automatically; you must manually create them. The oc-mirror plugin v2 does, however, generate `ClusterCatalog` resources automatically.

  For more information on creating and applying `ClusterCatalog` resources, see "Adding a catalog to a cluster" in "Extensions".

  </div>

After you install the cluster, you must install these resources into the cluster.

- You have mirrored the image set to the registry mirror in the disconnected environment.

- You have access to the cluster as a user with the `cluster-admin` role.

1.  Log in to the OpenShift CLI as a user with the `cluster-admin` role.

2.  Apply the YAML files from the results directory to the cluster:

    ``` terminal
    $ oc apply -f ./oc-mirror-workspace/results-<id>/
    ```

<!-- -->

1.  Verify that the `ImageContentSourcePolicy` resources were successfully installed:

    ``` terminal
    $ oc get imagecontentsourcepolicy
    ```

2.  Verify that the `CatalogSource` resources were successfully installed:

    ``` terminal
    $ oc get catalogsource --all-namespaces
    ```

- [Adding a catalog to a cluster](../../extensions/catalogs/managing-catalogs.xml#olmv1-adding-a-catalog-to-a-cluster_managing-catalogs) in "Extensions"

## Configuring the default storage container

After you install the cluster, you must install the Nutanix CSI Operator and configure the default storage container for the cluster.

For more information, see the Nutanix documentation for [installing the CSI Operator](https://opendocs.nutanix.com/openshift/operators/csi/) and [configuring registry storage](https://opendocs.nutanix.com/openshift/post-install/).

# Telemetry access for OpenShift Container Platform

To provide metrics about cluster health and the success of updates, the Telemetry service requires internet access. When connected, this service runs automatically by default and registers your cluster to [OpenShift Cluster Manager](https://console.redhat.com/openshift).

After you confirm that your [OpenShift Cluster Manager](https://console.redhat.com/openshift) inventory is correct, either maintained automatically by Telemetry or manually by using OpenShift Cluster Manager,use subscription watch to track your OpenShift Container Platform subscriptions at the account or multi-cluster level. For more information about subscription watch, see "Data Gathered and Used by Red Hat’s subscription services" in the *Additional resources* section.

# Additional resources

- [About remote health monitoring](../../support/remote_health_monitoring/about-remote-health-monitoring.xml#about-remote-health-monitoring)

# Next steps

- If necessary, see [Remote health reporting](../../support/remote_health_monitoring/remote-health-reporting.xml#remote-health-reporting)

- If necessary, see [Registering your disconnected cluster](../../support/remote_health_monitoring/remote-health-reporting.xml#insights-operator-register-disconnected-cluster_remote-health-reporting)

- [Customize your cluster](../../post_installation_configuration/cluster-tasks.xml#available_cluster_customizations)
